--- a/ZooConsole/ZooConsole.csproj
+++ b/ZooConsole/ZooConsole.csproj
@@ -42,8 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
+    <Compile Include="Bear.cs" />
+    <Compile Include="Elephant.cs" />
+    <Compile Include="Fox.cs" />
+    <Compile Include="Lion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tiger.cs" />
+    <Compile Include="Wolf.cs" />
+    <Compile Include="Zoo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
