--- a/ZooConsole/ZooConsole.csproj
+++ b/ZooConsole/ZooConsole.csproj
@@ -42,16 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal.cs" />
-    <Compile Include="Bear.cs" />
-    <Compile Include="Elephant.cs" />
-    <Compile Include="Fox.cs" />
-    <Compile Include="Lion.cs" />
+    <Compile Include="Animal\Animal.cs" />
+    <Compile Include="Animal\Spicies\Bear.cs" />
+    <Compile Include="Animal\Condition.cs" />
+    <Compile Include="Animal\Spicies\Elephant.cs" />
+    <Compile Include="Animal\Spicies\Fox.cs" />
+    <Compile Include="Animal\Spicies\Lion.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tiger.cs" />
-    <Compile Include="Wolf.cs" />
-    <Compile Include="Zoo.cs" />
+    <Compile Include="Animal\Spicies\Species.cs" />
+    <Compile Include="Animal\Spicies\Tiger.cs" />
+    <Compile Include="Animal\Spicies\Wolf.cs" />
+    <Compile Include="Zoo\Zoo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
