--- a/ZooConsole/ZooConsole.csproj
+++ b/ZooConsole/ZooConsole.csproj
@@ -42,19 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Animal\Animal.cs" />
-    <Compile Include="Animal\Spicies\Bear.cs" />
-    <Compile Include="Animal\Condition.cs" />
-    <Compile Include="Animal\Spicies\Elephant.cs" />
-    <Compile Include="Animal\Spicies\Fox.cs" />
-    <Compile Include="Animal\Spicies\Lion.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="Animals\Animal.cs" />
+    <Compile Include="Animals\Bear.cs" />
+    <Compile Include="Animals\Settings\Condition.cs" />
+    <Compile Include="Animals\Elephant.cs" />
+    <Compile Include="Animals\Fox.cs" />
+    <Compile Include="Animals\Lion.cs" />
+    <Compile Include="ZooManagement\Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Animal\Spicies\Species.cs" />
-    <Compile Include="Animal\Spicies\Tiger.cs" />
-    <Compile Include="Animal\Spicies\Wolf.cs" />
-    <Compile Include="Zoo\Zoo.cs" />
+    <Compile Include="Animals\Settings\Species.cs" />
+    <Compile Include="Animals\Tiger.cs" />
+    <Compile Include="Animals\Wolf.cs" />
+    <Compile Include="ZooManagement\Zoo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
